# autodoc

./: .buildinfo  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  README.html  README.md  api_reference.html  docker-compose.yaml  genindex.html  index.html  objects.inv  prepush_check.py  prototype_audit_generator.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  search.html  searchindex.js  update_conf.py
.doctrees/: README.doctree  api_reference.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/project/: contributing.doctree  objectives.doctree  overview.doctree  plan.doctree  results.doctree
.github/workflows/: docs.yml
.specify/: feature.json
.specify/extensions/: .registry
_sources/: README.rst.txt  api_reference.rst.txt  index.rst.txt
_static/: custom-wide.css  sidebar-scroll.js
audit_docs_suggestion/: Audit_Ready_Documentation_Requirements.md
autoapi/: index.html
docs/: Makefile  README.rst  api_reference.rst  conf.py  index.rst  requirements.txt
project/: contributing.html  objectives.html  overview.html  plan.html  results.html
src/: files_missing_docstring.csv  main.py
tests/: conftest.py  test_admin_jobs.py  test_admin_router.py  test_admin_security.py  test_architecture_services.py  test_code_block_extraction.py  test_doc_services.py  test_docstring_generation.py  test_docstring_pr_services.py  test_docstring_validation.py  test_git_utils.py  test_output_paths.py  test_router.py  test_sphinx_template.py  test_update_conf_content.py
(+173 files in other folders)
